--- a/pipelines.gocd.yaml
+++ b/pipelines.gocd.yaml
@@ -94,3 +94,31 @@ pipelines:
                 - sleep 10
                 command: /bin/bash
                 run_if: passed
+  deploy-dev:
+    group: spring-apps
+    label_template: ${COUNT}
+    lock_behavior: none
+    display_order: -1
+    materials:
+      git:
+        git: https://github.com/brunooon/hello-world.git
+        shallow_clone: false
+        auto_update: true
+        branch: master
+    stages:
+    - deploy:
+        fetch_materials: true
+        keep_artifacts: false
+        clean_workspace: false
+        approval:
+          type: success
+        jobs:
+          dev:
+            timeout: 0
+            tasks:
+            - exec:
+                arguments:
+                - -c
+                - sleep 10
+                command: /bin/bash
+                run_if: passed
