--- a/pipelines.gocd.yaml
+++ b/pipelines.gocd.yaml
@@ -97,6 +97,24 @@ pipelines:
                 - sleep 5
                 command: /bin/bash
                 run_if: passed
+    - tests:
+        fetch_materials: true
+        keep_artifacts: false
+        clean_workspace: false
+        approval:
+          type: manual
+        jobs:
+          publish:
+            resources:
+              - git
+            timeout: 0
+            tasks:
+            - exec:
+                arguments:
+                - -c
+                - sleep 5
+                command: /bin/bash
+                run_if: passed
   deploy-ti:
     group: spring-apps
     label_template: ${COUNT}
@@ -123,6 +141,24 @@ pipelines:
           type: success
         jobs:
           dev:
+            timeout: 0
+            tasks:
+            - exec:
+                arguments:
+                - -c
+                - sleep 5
+                command: /bin/bash
+                run_if: passed
+    - tests:
+        fetch_materials: true
+        keep_artifacts: false
+        clean_workspace: false
+        approval:
+          type: manual
+        jobs:
+          publish:
+            resources:
+              - git
             timeout: 0
             tasks:
             - exec:
