--- a/pipelines.gocd.yaml
+++ b/pipelines.gocd.yaml
@@ -102,7 +102,7 @@ pipelines:
         keep_artifacts: false
         clean_workspace: false
         approval:
-          type: manual
+          type: success
         jobs:
           publish:
             resources:
@@ -154,7 +154,7 @@ pipelines:
         keep_artifacts: false
         clean_workspace: false
         approval:
-          type: manual
+          type: success
         jobs:
           publish:
             resources:
